# Zenonia2-psvita-port

./: .gitignore  CLAUDE.md  CMakeLists.txt  INSTALL.md  README.md  build.sh  clean_macos_files.sh  exports_input.txt  extract_gst.py  extract_gxl.py  imports.txt  manage_vita.py  pack_all_spa_to_eng.py  pack_gst.py  pack_gxl.py  patch.c  plan_zenonia_port.md  port_progress.md  test_safe_cmake.sh  translate_gxl.py  translate_json.py
extracted_toolkit/psvita-port-toolkit/: README.md
lib/falso_jni/: FalsoJNI_Logger.c
loader/: audio.c  audio.h  dynlib.c  generate_jni.py  image_load.c  image_load.h  java.c  jni_stubs.c  main.c  postprocess.c  postprocess.h  so_util.c  so_util.h
porting_tools/: README.md  manage_vita.py
porting_tools/tests/: run_tests.sh
sce_sys/livearea/contents/: template.xml
tests/: test_wrappers  test_wrappers.c
